[tool.poetry]
name = "apex-market-scraper"
version = "0.1.0"
description = "Independent market ingestion scraper for Apex-digital"
authors = ["Apex-digital <dev@apex-digital.local>"]
readme = "README.md"
packages = [{ include = "apex_market_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pydantic-settings = "^2.4.0"
pyyaml = "^6.0.2"
requests = "^2.32.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.scripts]
apex-market-scraper = "apex_market_scraper.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
